# mbox-importer

./: .git-blame-ignore-revs  .kde-ci.yml  CMakeLists.txt
po/ar/: mboximporter.po
po/ast/: mboximporter.po
po/bg/: mboximporter.po
po/bs/: mboximporter.po
po/ca/: mboximporter.po
po/ca@valencia/: mboximporter.po
po/cs/: mboximporter.po
po/da/: mboximporter.po
po/de/: mboximporter.po
po/el/: mboximporter.po
po/en_GB/: mboximporter.po
po/eo/: mboximporter.po
po/es/: mboximporter.po
po/et/: mboximporter.po
po/eu/: mboximporter.po
po/fi/: mboximporter.po
po/fr/: mboximporter.po
po/ga/: mboximporter.po
po/gl/: mboximporter.po
po/he/: mboximporter.po
po/hi/: mboximporter.po
po/hu/: mboximporter.po
po/ia/: mboximporter.po
po/it/: mboximporter.po
po/ja/: mboximporter.po
po/ka/: mboximporter.po
po/kk/: mboximporter.po
po/ko/: mboximporter.po
po/lt/: mboximporter.po
po/lv/: mboximporter.po
po/nb/: mboximporter.po
po/nds/: mboximporter.po
po/nl/: mboximporter.po
po/nn/: mboximporter.po
po/pl/: mboximporter.po
po/pt/: mboximporter.po
po/pt_BR/: mboximporter.po
po/ro/: mboximporter.po
po/ru/: mboximporter.po
po/sa/: mboximporter.po
po/sk/: mboximporter.po
po/sl/: mboximporter.po
po/sr/: mboximporter.po
po/sr@ijekavian/: mboximporter.po
po/sr@ijekavianlatin/: mboximporter.po
po/sr@latin/: mboximporter.po
po/sv/: mboximporter.po
po/tr/: mboximporter.po
po/ug/: mboximporter.po
po/uk/: mboximporter.po
po/zh_CN/: mboximporter.po
po/zh_TW/: mboximporter.po
src/: CMakeLists.txt  main.cpp  mboximporter-version.h.cmake  mboximporter-version.h.in  mboximporterinfogui.cpp  mboximporterinfogui.h  mboximportkernel.cpp  mboximportkernel.h  mboximportwidget.cpp  mboximportwidget.h  mboxmainwindow.cpp  mboxmainwindow.h  org.kde.mboximporter.desktop
src/ui/: mboximportwidget.ui
